objects/Veda_Address__c.object
<CustomObject>
    <fields>
        <fullName>Residential_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residential Address</label>
        <referenceTo>Residential_Address__c</referenceTo>
        <relationshipLabel>Veda Addresses</relationshipLabel>
        <relationshipName>Veda_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Veda_Comprehensive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Comprehensive</label>
        <referenceTo>Veda_Comprehensive__c</referenceTo>
        <relationshipLabel>Veda Addresses</relationshipLabel>
        <relationshipName>Veda_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>first_Reported_Date__c</fullName>
        <label>first Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Reported_Date__c</fullName>
        <label>last Reported Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Address</label>
    <nameField>
        <label>Adress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>